# ai-research-env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
backend/: server.py
backend/env/: research_env.py
backend/static/: index.html
backend/static/assets/: index-CIMOP8Sf.js  index-D9_6BgqC.js  index-Dtjt-2c_.css
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/store/: useStore.js
server/: app.py
tests/: test_env.py  test_server.py
